--- a/我再也不会把孩子送去学校/6.Learn drive and reward.md
+++ b/我再也不会把孩子送去学校/6.Learn drive and reward.md
@@ -4,7 +4,7 @@
 
 关于教育的主要问题是认为学习可能会引起不快，而且应该[忍受](https://supermemo.guru/wiki/The_grind_is_the_glory)这种不快从而学的更多。
 
-有无数的教育者认为学校应该像工作一样:它令人不快，但它只是需要去做。在这一章中，我将解释相反的才是对的:
+有无数的教育者认为学校应该像工作一样：它令人不快，但它只是需要去做。在这一章中，我将解释相反的才是对的：
 
 **好的学习本身就是快乐的**，没有快乐就没有好的学习。
 
@@ -24,9 +24,9 @@
 
 信息论中有一个姊妹概念叫[香农熵](https://en.wikipedia.org/wiki/Entropy_(information_theory))。它可以理解为由一个来源发送的信息的平均值。例如，假设一个频道连续不断地将一串相同的字母传送到无穷远处(例如，一串As :“AAA……”)中。这是完全可以预测的，并且熵为零。我们不会从这样的渠道学习。
 
-[克劳德·香农](https://en.wikipedia.org/wiki/Claude_Shannon)在1948年提出了信息熵的概念。不久之后，科学家们开始假设信息通道的熵是否会对大脑感知通道价值的方式产生强大影响。1957年，[迈耶假设](https://supermemo.guru/wiki/Music_and_entropy)音乐的熵决定了人们对音乐之美的感知。他的结论是，较高的熵可能会导致主观紧张，这与更有意思的音乐片段有关。
+[克劳德·香农](https://en.wikipedia.org/wiki/Claude_Shannon)在1948年提出了信息熵的概念。不久之后，科学家们开始假设信息渠道的熵是否会对大脑感知渠道价值的方式产生强大影响。1957年，[迈耶假设](https://supermemo.guru/wiki/Music_and_entropy)音乐的熵决定了人们对音乐之美的感知。他的结论是，较高的熵可能会导致主观紧张，这与更有意思的音乐片段有关。
 
-迈耶的思想[后来被改进](https://supermemo.guru/wiki/Impact_of_syncopation_on_the_pleasure_of_music)，以更好地理解音乐和一般信息的感知。音乐不仅仅是信息。这通过一个现象来看是很显然的，因为一首歌被多次回放可以令人愉快好多次。但是书籍很少出现这种情况。
+迈耶的思想[后来被改进](https://supermemo.guru/wiki/Impact_of_syncopation_on_the_pleasure_of_music)，以更好地理解对音乐和普通信息的感知。音乐不仅仅是信息。这通过一个现象来看是很显然的，因为一首歌被多次回放可以令人愉快好多次。但是书籍很少出现这种情况。
 
 音乐是一种普遍的信息。如果你被允许选择一个无线频道，你会很快从嘈杂的静电干扰中调谐出来，你也不会对零熵的静音太兴奋。但是，大多数人会对有规律的鼓声做出积极的反应。只要它没有被敲打在碎玻璃上(这是我们天生不喜欢的)，我们就会发现一个有固定鼓点的广播频道比无声的更有趣。这自然只会持续一段时间，直到鼓点本身变得无聊和太容易预测。
 
@@ -40,7 +40,7 @@
 
 ## 6.4 大脑中的熵检测器
 
-大脑无法有效检测撞击视网膜或耳膜的信号的熵。就像显示器上的像素一样，视网膜细胞也不知道它们传达了什么。如果检测器，如海马体，要根据熵而响应，它必须对来自内嗅皮层的输入(即海马体本身的输入)进行操作。这些输入将在高度处理后显示信号。它可能会呈现一个概念，而不是像素。感觉输入端的高熵信号将在神经选择、完善和[归纳](https://supermemo.guru/wiki/Generalization)过程的早期失去大部分噪声成分。信噪比将决定丢失多少信息。噪音越大，损失越大。我们越聪明，这个处理过程就越有选择性，在那个阶段会丢失越多信息。这很好。我们对细节视而不见。模式识别就像一个确定性函数，根据定义，它会导致熵的下降。复杂的模式可能会变成简单的概念。这些概念将为检测器提供实际输入，例如海马体。
+大脑无法有效检测撞击视网膜或耳膜的信号的熵。就像显示器上的像素一样，视网膜细胞也不知道它们传达了什么。如果检测器，如海马体，要根据熵而响应，它必须对来自内嗅皮层的输入(即海马体本身的输入)进行操作。这些输入将在高度处理后显示信号。它可能会呈现一个概念，而不是像素。感觉输入端的高熵信号将在神经选择、完善和[推广](https://supermemo.guru/wiki/Generalization)过程的早期失去大部分噪声成分。信噪比将决定丢失多少信息。噪音越大，损失越大。我们越聪明，这个处理过程就越有选择性，在那个阶段会丢失越多信息。这很好。我们对细节视而不见。模式识别就像一个确定性函数，根据定义，它会导致熵的下降。复杂的模式可能会变成简单的概念。这些概念将为检测器提供实际输入，例如海马体。
 
 请注意，实验中产生的视觉流证明[海马体对信号熵的反应](https://www.ncbi.nlm.nih.gov/pubmed/15896570)具有高度[象征性](https://supermemo.guru/wiki/Abstract_knowledge)。因此，视觉流在处理过程中丢失的信息会少得多。这一高度简化和[概念化](https://supermemo.guru/wiki/Generalization)的信息将会被扫描为意外，并为整个[学习内驱力](https://supermemo.guru/wiki/Learn_drive)系统提供指引。这就是为什么在这种情况下，海马体似乎对输入熵有反应。
 
@@ -50,13 +50,13 @@
 
 感受信息扫描中一个被低估的因素是大脑中信息处理的速度。
 
-对于每一首音乐，都有一个可以接受的播放速度范围，在其范围内我们可以欣赏音乐之美。高速播放可能会很烦人，而且音乐可能变得难以解码，因为高速超出了我们的处理能力。同一首音乐如果放慢了速度，很快就会失去吸引力。演讲或课堂讲授也是如此。对于相同的信息和相同的熵水平，我们可以实现完全不同的信号吸引力水平。总是有一个最优的传送速度，该速度取决于影响[学习内驱力](https://supermemo.guru/wiki/Learn_drive)的所有其他因素，包括预备知识。因此，交付速度是高度个性化的。
+对于每一首音乐，都有一个可以接受的播放速度范围，在其范围内我们可以欣赏音乐之美。高速播放可能会很烦人，而且音乐可能变得难以解码，因为高速超出了我们的处理能力。同一首音乐如果放慢了速度，很快就会失去吸引力。演讲或课堂讲授也是如此。对于相同的信息和相同的熵水平，我们可以实现完全不同的信号吸引力水平。总是有一个最优的传授速度，该速度取决于影响[学习内驱力](https://supermemo.guru/wiki/Learn_drive)的所有其他因素，包括预备知识。因此，传授速度是高度个性化的。
 
 我喜欢以1.4倍的速度听讲座。我用1.3倍来听更有挑战性的片段。虽然我从来没有加快 [Fareed Zakaria](https://en.wikipedia.org/wiki/Fareed_Zakaria_GPS) 的速度，但是我享受这个节目中的每一条信息。课堂上的学生没有加速或减速按钮。即使是暂停按钮，如果有的话，也很难去点击，因为它可能会惹恼其他学生。
 
-在学校里，交付的速度常常超过学生的处理能力。这导致了微不足道的学习和强大的压力。没有时间[欣赏高速列车窗外的风景](https://supermemo.guru/wiki/Futility_of_schooling)。在麻省理工学院，他们称之为“[*用消防水管喝水*](https://supermemo.guru/wiki/Futility_of_schooling)”。
+在学校里，传授的速度常常超过学生的处理能力。这导致了微不足道的学习和强大的压力。没有时间[欣赏高速列车窗外的风景](https://supermemo.guru/wiki/Futility_of_schooling)。在麻省理工学院，他们称之为“[*用消防水管喝水*](https://supermemo.guru/wiki/Futility_of_schooling)”。
 
-## 6.6 概率 与 知识
+## 6.6 概率与知识
 
 低概率事件携带更多信息。平均信息决定熵。预备知识决定了对信息通道的熵的感知。
 
@@ -70,7 +70,7 @@
 
 概率和复杂性不是信息感知的唯一组成部分。我们似乎在寻找可预测性和意外之间的平衡。我喜欢乡土爵士乐。在这种类型的音乐中，低音部通常是高度可预测的，伴着[最优的切分音数量](https://supermemo.guru/wiki/Impact_of_syncopation_on_the_pleasure_of_music)。这使得身体运动与节奏同步变得容易。然而，如果没有意外，乡土爵士乐就不会有意思。在这里，复杂的爵士乐即兴表演会刺激负责检测“意外”的神经系统。此外，经过几十年的学习，我的大脑有一个完整的信号数据库。可能有一个我认识并喜欢的伴唱歌手的声音。我的大脑已经准备好迎接乡土爵士乐了。
 
-我喜欢肯·罗宾逊关于创造力的讲座。在某种程度上，它们是高度可预测的。我完全同意罗宾逊，所以你可以说罗宾逊助长了我的证实性偏见。这很愉快。当人们与我们观点一致时，我们喜欢说“英雄所见略同”。但是，如果罗宾逊继续重复同样陈腔滥调，讲述学校如何扼杀创造力，他将失去吸引力。熵可以解释为平均预期[意外](https://en.wikipedia.org/wiki/Self-information)。罗宾逊的交付带来了很多意外。他可能会以不同的、不同寻常的创造性方式描绘相同的模型。因此，[大脑接收新的信息，产生概括，并确认现有的模型。](https://en.wikipedia.org/wiki/Self-information)从新的语境中得出的概括可以增强[知识的一致性](https://supermemo.guru/wiki/Knowledge_coherence)。在基于已知模型的消息中，这是一种非常令人愉快的补充。
+我喜欢肯·罗宾逊关于创造力的讲座。在某种程度上，它们是高度可预测的。我完全同意罗宾逊，所以你可以说罗宾逊助长了我的证实性偏见。这很愉快。当人们与我们观点一致时，我们喜欢说“英雄所见略同”。但是，如果罗宾逊继续重复同样陈腔滥调，讲述学校如何扼杀创造力，他将失去吸引力。熵可以解释为平均预期[意外](https://en.wikipedia.org/wiki/Self-information)。罗宾逊的传授带来了很多意外。他可能会以不同的、不同寻常的创造性方式描绘相同的模型。因此，[大脑接收新的信息，产生概括，并确认现有的模型。](https://en.wikipedia.org/wiki/Self-information)从新的语境中得出的概括可以增强[知识的一致性](https://supermemo.guru/wiki/Knowledge_coherence)。在基于已知模型的消息中，这是一种非常令人愉快的补充。
 
 罗宾逊的讲座在可预测性和意外之间找到了很好的平衡。
 
@@ -111,7 +111,7 @@
 
 在预期检测到一个高[学习熵](https://supermemo.guru/wiki/Learntropy)信号后，就会产生对高价值信息的积极追求。海马体检测到一条信息后，可能会同时将相关的学习信息发送到大脑皮层，并向快乐中心发送奖励信号。这将意味着学习新东西的时刻！
 
-## 6.9 wow 因子
+## 6.9 「哇！」因子
 
 1977年夏天，在寻找外星智能的时候，SETI的研究人员发现了一个来自[射手座](https://en.wikipedia.org/wiki/Sagittarius_(constellation))的不寻常的无线电信号。在宇宙空间微弱的低水平噪声中，信号是极不可能出现的。低概率标志着高意外。天文学家杰里·厄尔曼在打印输出上圈出6个与信号相对应的字母，并在旁边写上了"Wow!"(哇！)。
 
@@ -125,9 +125,9 @@
 
 信息渠道的可靠性很重要。如果错误率高，[学习内驱力](https://supermemo.guru/wiki/Learn_drive)可能会减弱。当彭齐亚斯和威尔逊在1964年发现宇宙微波背景辐射时，并没有"Wow!" 。困惑的研究人员继续从他们的无线电天线上移除鸽子粪便。解释神秘噪音时，他们优先考虑了鸽子粪的原因。1978年，彭齐亚斯和威尔逊因为他们的发现获得了诺贝尔奖。
 
-当一个科学家有了一个发现，他可能会惊呼“尤里卡！”和冲压空气。他大脑中某个地方的神经网络产生了一种[归纳](https://supermemo.guru/wiki/Generalization)，结果发出了奖励信号。这进一步传播，让一个老人像孩子一样在实验室里跳跃。
+当一个科学家有了一个发现，他可能会惊呼“尤里卡！”和手舞足蹈。他大脑中某个地方的神经网络产生了一种[推广](https://supermemo.guru/wiki/Generalization)，结果发出了奖励信号。这进一步传播，让一个老人像孩子一样在实验室里跳跃。
 
-人生早期也是如此。一个在空房间里蹒跚学步的孩子会寻找环境中的低概率成分，比如彩色物体、新玩具等等。当一个蹒跚学步的孩子用勺子从桌子上掉下来做实验时，她就像一个小科学家。然而，当大脑做出“*所有落下的勺子都会发出声音*”的[归纳](https://supermemo.guru/wiki/Generalization)时，她也会得到奖励。她可能会以和快乐的科学家完全一样的方式庆祝，与年龄无关。一个大大的微笑是第一个明确的信号。
+人生早期也是如此。一个在空房间里蹒跚学步的孩子会寻找环境中的低概率成分，比如彩色物体、新玩具等等。当一个蹒跚学步的孩子用勺子从桌子上掉下来做实验时，她就像一个小科学家。然而，当大脑做出“*所有落下的勺子都会发出声音*”的[推广](https://supermemo.guru/wiki/Generalization)时，她也会得到奖励。她可能会以和快乐的科学家完全一样的方式庆祝，与年龄无关。一个大大的微笑是第一个明确的信号。
 
 在由[学习内驱力](https://supermemo.guru/wiki/Learn_drive)控制的各种形式的学习中，同样的快乐在较小程度上也会发生。不管我们是否了解名人或岩石的化学成分。事情很有趣，因为它们通过学习内驱力机制奖励大脑。
 
@@ -201,7 +201,7 @@
 
 ## 6.11 学习熵
 
-有许多因素会影响大脑对信息和信息渠道的感知和评估。在前面的章节中，我们已经注意到大脑不仅对熵有反应。还有许多因素可以调节单个信息的熵或意外的影响。这些因素包括:编码、交付速度、预处理(例如归纳、完善、识别等)。)，预备知识(包括估值、情绪价、渠道可靠性等)，最优水平(受处理速度影响)，等等。 
+有许多因素会影响大脑对信息和信息渠道的感知和评估。在前面的章节中，我们已经注意到大脑不仅对熵有反应。还有许多因素可以调节单个信息的熵或意外的影响。这些因素包括:编码、传授速度、预处理(例如推广、完善、识别等)。)，预备知识(包括估值、情绪价、渠道可靠性等)，最优水平(受处理速度影响)，等等。 
 
 这一过程的复杂性要求有一个更好的概念来概括所有这些细微差别。我建议使用学习熵这个术语来描述从特定背景下的个人大脑的角度来看的教育渠道或信号的吸引力。
 
@@ -215,11 +215,11 @@
 
 高知识估值导致高[学习熵](https://supermemo.guru/wiki/Learntropy)，而学习熵又为长期记忆知识的注意力和语义插入提供了必要条件。在强大的反馈循环中，**学习熵增强了[学习内驱力](https://supermemo.guru/wiki/Learn_drive)，这是决定学习熵的估值的基础。**这种反馈循环通过遗忘、习得性无助、衰老、伤害和精神资源的纯粹可用性来控制。通过合理的学习和生活方式管理，特别是[自然创造力循环](https://supermemo.guru/wiki/Natural_creativity_cycle)，这种平衡可以在高[学习内驱力](https://supermemo.guru/wiki/Learn_drive)水平上保持几十年。
 
-## 6.12 信息时机 与 学习熵
+## 6.12 信息时机与学习熵
 
 从学习流中的各个信息获得的奖励程度将决定信息学习熵的水平。关于无聊话题的讲座的学习熵很低。在网上寻找解决某个特定问题所需的信息会带来很高的学习熵。
 
-与基于平均值的[香农熵](https://en.wikipedia.org/wiki/Entropy_(information_theory))不同，学习熵更像是一个趋势平均数，最新的信息将比之前传递的信息具有更高的权重。此外，学习熵植根于支配[记忆巩固](https://supermemo.guru/wiki/Two_component_model_of_memory)的规律，包括[间隔效应](https://supermemo.guru/wiki/Spacing_effect)。
+与基于平均值的[香农熵](https://en.wikipedia.org/wiki/Entropy_(information_theory))不同，学习熵更像是一个趋势平均数，最新的信息将比之前传授的信息具有更高的权重。此外，学习熵植根于支配[记忆巩固](https://supermemo.guru/wiki/Two_component_model_of_memory)的规律，包括[间隔效应](https://supermemo.guru/wiki/Spacing_effect)。
 
 一旦知识的金块填补了理解上的一个重要空白，枯燥的演讲的学习熵就会激增。学习熵的增加与决定知识估值的记忆[稳定性](https://supermemo.guru/wiki/Stability)轨迹的表达式成正比(包括[知识估值网络](https://supermemo.guru/wiki/Knowledge_valuation_network)中的下降轨迹)。随着时间的推移，金块的影响将逐渐减弱。这些令人愉快的发现的累积效应将决定在任何特定时段(例如在演讲期间)的学习熵的水平。
 
@@ -241,15 +241,14 @@
 
 学习熵将决定[学习内驱力](https://supermemo.guru/wiki/Learn_drive)，但两者将以不同的规则来维持。学习内驱力依赖于知识，因此将受到[间隔重复](https://supermemo.guru/wiki/Spaced_repetition)的影响。由于知识是一个网络，所以说学习内驱力的最优激励可能是没有意义的。为了最大限度地提高学习内驱力，我们应该终身学习，尊重[自然创造力周期](https://supermemo.guru/wiki/Natural_creativity_cycle)，并注意大脑的健康(即一般的健康)。
 
-## 6.14 Optimum information delivery
+## 6.14 最优信息传授
 
-In schooling, we might envisage a lecture delivered at optimum [learntropy](https://supermemo.guru/wiki/Learntropy) level, in which a student keeps saying "*wow! wow!*". She keeps taking down notes as fast as humanly possible. More often though, the lecture will buzz a high entropy signal or ooze boredom. Its learntropy will be low or even negative.
+在学校教育中，我们可以设想一个处于最优[学习熵](https://supermemo.guru/wiki/Learntropy)水平的讲座，在这个讲座中一个学生不断地说“哇!哇!”她保持尽可能快地记笔记。但是，更常见的情况是，讲座会发出一个高熵信息或让人感到无聊。它的学习熵会很低，甚至是负数。
+如果最佳学习熵水平取决于学生，老师该如何最好地向课堂传授知识？有时候适合所有人的传授是不可能的。换句话说，这困难到需要天才的教学技能。对大多数老师来说，他们的传授使大多数孩子感到无聊或沮丧。
 
-If optimum learntropy levels depend on the student, how can a teacher optimally deliver knowledge to a classroom? Sometimes universal delivery is impossible. In other cases, it is difficult enough to require genius teaching skills. For most teachers, lecture delivery keeps most kids bored or frustrated.
+在课堂上，少数幸运儿可能会理解大部分信息。对于有天赋的人来说，这堂课可能没有带来多少新知识。对他们来说这很无聊。对于其他孩子来说，信息的复杂性超过了他们的理解水平。在这种情况下，如果他们试图理解它，讲座可能会令他们挫败。一个关于弦理论的讲座可能相当于一个随机的英语单词序列的噪音。讲课是浪费时间的活动。诺贝尔奖得主[卡尔·威曼](https://supermemo.guru/wiki/Carl_Wieman)把它比作[放血](https://supermemo.guru/wiki/Wieman:_Lectures_make_no_sense)。
 
-In lecture delivery, a lucky few may get most of the message. For a fraction of the gifted, the lecture may carry nothing new. For them it is boring. For other kids, message complexity goes above their comprehension level. In such cases, the lecture can be frustrating if they try to decode it. A lecture on string theory might be comparable to a noise of randomly shuffled English words. Lecturing is an exercise in timewasting. Nobel Prize winner [Carl Wieman](https://supermemo.guru/wiki/Carl_Wieman) compared it to [blood-letting](https://supermemo.guru/wiki/Wieman:_Lectures_make_no_sense).
-
-To avoid the frustration of negative learntropy, students will tune out like you tuned out from that Thai channel I mentioned [earlier](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Prior_knowledge_in_information_seeking). Children will ignore the static noise coming from the teacher and tune in to other channels that carry more appropriate levels of learntropy (e.g. Facebook on a phone under the desk). Even if their comprehension is good, the knowledge delivered may not complement their current knowledge. If it does not generate [high-quality high-value](https://supermemo.guru/wiki/Knowledge_valuation_network) generalization, it will be considered obvious or irrelevant.
+为了避免负学习熵带来的挫折，学生们会像你从我[前面](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Prior_knowledge_in_information_seeking)提到的泰国频道换台一样"换台"。孩子们会忽略来自老师的"静电噪音"，并收听到其他“频道”，这些频道有更合适的学习熵水平（例如桌下的手机上的Facebook）。即使他们的理解能力很好，所传授的知识也可能无法与他们目前的知识互补。如果这些知识不能产生[高质量高价值](https://supermemo.guru/wiki/Knowledge_valuation_network)的推广，就会被认为是显而易见或毫无关联的。
 
 Low learntropy, even if occurring occasionally, conditions the student to tune out. After a while, students will develop a filter that will turn a teacher into a silent radio channel carrying zero entropy and zero learntropy. Improvements to lecture quality will become futile. The teacher disappears!
 
