--- a/我再也不会把孩子送去学校/8.Education counteracts evolution.md
+++ b/我再也不会把孩子送去学校/8.Education counteracts evolution.md
@@ -1,6 +1,6 @@
-# 8 Education counteracts evolution
+# 8 教育对抗进化
 
-## 8.1 Inefficiency of education
+## 8.1 教育的低效
 
 The education system design counters half a billion years of the evolution of the nervous system
 
