--- a/我再也不会把孩子送去学校/6.Learn drive and reward.md
+++ b/我再也不会把孩子送去学校/6.Learn drive and reward.md
@@ -44,7 +44,7 @@
 
 请注意，实验中产生的视觉流证明[海马体对信号熵的反应](https://www.ncbi.nlm.nih.gov/pubmed/15896570)具有高度[象征性](https://supermemo.guru/wiki/Abstract_knowledge)。因此，视觉流在处理过程中丢失的信息会少得多。这一高度简化和[概念化](https://supermemo.guru/wiki/Generalization)的信息将会被扫描为意外，并为整个[学习内驱力](https://supermemo.guru/wiki/Learn_drive)系统提供指引。这就是为什么在这种情况下，海马体似乎对输入熵有反应。
 
-上面的推理解释了为什么低熵和高熵的感觉信号都是无趣的。经过一定程度的处理后，高熵信号可能会失去所有噪声，并向海马体传递低熵输入。然后，我们观察感官输入时“最优熵”水平的错觉。我们需要一个新的概念，**学习熵**，来帮助我们准确地判断信号的吸引力。学习熵需要考虑信息的高度处理，然后才能激活大脑中的奖励中心。本文稍后将讨论[学习熵](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Learntropy)。
+上面的推理解释了为什么低熵和高熵的感觉信号都是无趣的。经过一定程度的处理后，高熵信号可能会失去所有噪声，并向海马体传递低熵输入。然后，我们观察感官输入时“最优熵”水平的错觉。我们需要一个新的概念，**学习熵**，来帮助我们准确地判断信号的吸引力。学习熵需要考虑信息的高度处理，然后才能激活大脑中的奖励中心。本文稍后将讨论[学习熵](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#learn entropy)。
 
 ## 6.5 信息处理速度
 
@@ -62,7 +62,7 @@
 
 如果你碰巧收听了广播新闻，并且听到“珍妮特·杰克逊生了一个孩子”，你的兴趣程度将取决于事件发生的概率。如果你不知道珍妮特·杰克逊是谁，这是一个高概率事件。如果[每天约有35万名女性分娩](http://www.theworldcounts.com/stories/How-Many-Babies-Are-Born-Each-Day)，这已经不是新闻，也不是新鲜事或有趣的事。一名士兵在战争中的第一次死亡将成为新闻，但是当死亡人数增加到成千上万时，年轻的生命将只是一个统计数字。
 
-如果你碰巧认识珍妮特·杰克逊或者喜欢她的音乐，那么生孩子的概率会急剧下降到“*一生一次*”的水平(对珍妮特来说)。这会让你变得有兴趣。然而，如果你记得珍妮特是古代情景喜剧中的一个漂亮女孩，她生孩子可能会被归为“*不可能！*”。如果你意识到珍妮特 50 岁了，并且你知道更年期，你可能会立刻对她的情况产生病态的好奇。你预备知识决定了你对信息的反应。信道没有最优熵水平。只有最适合特定大脑的熵水平。在这一点上，你可能会看到，我们需要引入一个新的衍生概念，我们在[之后](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Learntropy)将称之为**学习熵**。学习熵将决定一个特定的通道对一个特定的大脑的吸引力。
+如果你碰巧认识珍妮特·杰克逊或者喜欢她的音乐，那么生孩子的概率会急剧下降到“*一生一次*”的水平(对珍妮特来说)。这会让你变得有兴趣。然而，如果你记得珍妮特是古代情景喜剧中的一个漂亮女孩，她生孩子可能会被归为“*不可能！*”。如果你意识到珍妮特 50 岁了，并且你知道更年期，你可能会立刻对她的情况产生病态的好奇。你预备知识决定了你对信息的反应。信道没有最优熵水平。只有最适合特定大脑的熵水平。在这一点上，你可能会看到，我们需要引入一个新的衍生概念，我们在[之后](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#learn entropy)将称之为**学习熵**。学习熵将决定一个特定的通道对一个特定的大脑的吸引力。
 
 如果你喜欢珍妮特式的八卦，那么这个八卦频道会给你带来恰到好处的意外。它将提供学习匹配。如果你缺乏相关知识或者你的优先级不同，你就会对它置之不理。你的学习重点也将决定你在特定领域的知识水平，以及你对任何特定渠道及其信息熵的反应。
 
@@ -80,27 +80,27 @@
 
 ## 6.8 检测意外
 
-人类的[学习内驱力](https://supermemo.guru/wiki/Learn_drive)是基于对[意外](https://en.wikipedia.org/wiki/Self-information)的检测。我们已经知道这一点很久了。人类和机器学习模型都以不同的名称涉及到这个概念。[皮亚杰](https://en.wikipedia.org/wiki/Jean_Piaget)写过，[图式](https://en.wikipedia.org/wiki/Jean_Piaget#Schema)在意外的影响下陷入失调。[杰夫·霍金斯](https://en.wikipedia.org/wiki/Jeff_Hawkins)在他的新大脑皮层模型中谈到了基于学习和智力的预测错误。我喜欢谈论模型，以及它们的细化(当新数据适合模型时)，或者矛盾(当新数据需要改变模型时)。
+人类的[学习内驱力](https://supermemo.guru/wiki/Learn_drive)是基于对[意外](https://en.wikipedia.org/wiki/Self-information)的检测。我们已经知道这一点很久了。人类和机器学习模型都以不同的名称涉及到这个概念。[Piaget](https://en.wikipedia.org/wiki/Jean_Piaget)写过，[图式](https://en.wikipedia.org/wiki/Jean_Piaget#Schema)在意外的影响下陷入失调。[Jeff_Hawki](https://en.wikipedia.org/wiki/Jeff_Hawkins)在他的新大脑皮层模型中谈到了基于学习和智力的预测错误。我喜欢谈论模型，以及它们的细化(当新数据适合模型时)，或者矛盾(当新数据需要改变模型时)。
 
 为了获得学习的奖励，一个新的令人意外的信息需要与预先存在的知识(模型、图式、预测等等)相容。为了获得奖励，神经处理是必要的。关于输入的信息需要被处理，并与存储在大脑中的信息进行比较。大脑输入信息的主要处理器之一是海马体。大脑的信息交换台能够将输入与先前的知识进行比较。
 
 视觉流的熵的测量不一定是信息通道令人愉悦的能力的可靠指标。流向海马体的所有信息都经过高度处理。代表美丽海滩的像素流将被加工成一系列形状和纹理。反过来，这些模型将依次模拟棕榈树、沙子和大海。这种高度压缩的简单信息将决定对信息输入的最初响应。
 
-扫描环境中的信息如同扫描食物的气味。气味很诱人，但只有实际去吃才是真正的回报。这就是熵扫描不需要回报的原因。它所需要做的就是获得奖励。如前所述，前海马对熵有反应，然而实验设计确保熵是指输入过程中不会丢失太多信息的简单形状的组合。与其说是信号熵，不如说是信息比较器(如海马)的输入熵。重要的不是视网膜像素，而是比较器输入上表示的手掌形状。对于比较器来说，灰度或静态噪声的高熵模式与白度或静音没有区别。它们在输入时都会带来相同的熵:零。这就是为什么我用“[学习熵](https://supermemo.guru/wiki/Learntropy)”这个词来准确地描述信息渠道的吸引力。
+扫描环境中的信息如同扫描食物的气味。气味很诱人，但只有实际去吃才是真正的回报。这就是熵扫描不需要回报的原因。它所需要做的就是获得奖励。如前所述，前海马对熵有反应，然而实验设计确保熵是指输入过程中不会丢失太多信息的简单形状的组合。与其说是信号熵，不如说是信息比较器(如海马)的输入熵。重要的不是视网膜像素，而是比较器输入上表示的手掌形状。对于比较器来说，灰度或静态噪声的高熵模式与白度或静音没有区别。它们在输入时都会带来相同的熵:零。这就是为什么我用“[学习熵](https://supermemo.guru/wiki/learn entropy)”这个词来准确地描述信息渠道的吸引力。
 
-响应信号熵的前海马体因发现哈莉•贝瑞神经元而闻名(见[更多](http://phys.org/news/2005-06-single-cell-recognition-halle-berry-neuron.html))。研究人员将电极植入一名同意接受治疗的癫痫患者体内，发现在不同情境下，单个神经元对哈莉•贝瑞(Halle Berry)图像的反应是一致的。同样的神经元也会对哈莉·贝瑞的名字做出反应。与此同时，后海马体对詹妮弗·安妮斯顿的反应可能不那么一致(这可能是前一层神经处理的迹象)。
+响应信号熵的前海马体因发现Halle •贝瑞神经元而闻名(见[更多](http://phys.org/news/2005-06-single-cell-recognition-halle-berry-neuron.html))。研究人员将电极植入一名同意接受治疗的癫痫患者体内，发现在不同情境下，单个神经元对 Halle Berry 图像的反应是一致的。同样的神经元也会对Halle Berry的名字做出反应。与此同时，后海马体对 Jennifer Aniston 的反应可能不那么一致(这可能是前一层神经处理的迹象)。
 
-我们大多数人都不知道哈莉·贝瑞的气味如何，她的气味可能不足以激活海马体中的哈莉·贝瑞神经元，然而，即使是气味信号也可以通过嗅球、嗅结节、松果体皮层和内嗅皮层中的几个突触快速到达那里(见图)。然而，如果一个人能听到哈莉的声音，声音信号可能会在嗅结节中出现，加强识别，并导致海马或更下方的新皮层中哈莉神经元的激活。
+我们大多数人都不知道 Halle Berry 的气味如何，她的气味可能不足以激活海马体中的 Halle Berry 神经元，然而，即使是气味信号也可以通过嗅球、嗅结节、松果体皮层和内嗅皮层中的几个突触快速到达那里(见图)。然而，如果一个人能听到 Halle 的声音，声音信号可能会在嗅结节中出现，加强识别，并导致海马或更下方的新皮层中 Halle 神经元的激活。
 
 [![Olfactory system anatomy](https://supermemo.guru/images/thumb/0/04/Olfactory_system_anatomy.jpg/692px-Olfactory_system_anatomy.jpg)](https://supermemo.guru/wiki/File:Olfactory_system_anatomy.jpg)
 
 > **图**:*嗅觉系统解剖学。嗅觉信号可以通过嗅球、嗅结节、小齿轮状皮层和鼻内皮层的几个突触快速到达海马体。(来源:维基百科)*
 
-这是否意味着哈莉会永久地存在于患者的海马体中？由于海马体与新记忆的形成有关，我们可能会认为哈莉出现在海马神经元中是识别的结果。她在病人心中的永久位置可能位于新皮层的更深一层。我们现在知道，在记忆巩固的过程中，知识印记[从海马体转移到新皮层](http://www.jneurosci.org/content/29/32/10087.full)。我们也非常肯定这个过程是[在睡眠中](http://super-memory.com/articles/sleep.htm#Neural_optimization_in_sleep)发生的。正是在新皮层，我们应该寻找代表哈莉或某人祖母的概念神经元。最后一种可能性产生了一种假设的神经元类型，称为[祖母神经元](https://en.wikipedia.org/wiki/Grandmother_cell)。
+这是否意味着 Halle 会永久地存在于患者的海马体中？由于海马体与新记忆的形成有关，我们可能会认为 Halle 出现在海马神经元中是识别的结果。她在病人心中的永久位置可能位于新皮层的更深一层。我们现在知道，在记忆巩固的过程中，知识印记[从海马体转移到新皮层](http://www.jneurosci.org/content/29/32/10087.full)。我们也非常肯定这个过程是[在睡眠中](http://super-memory.com/articles/sleep.htm#Neural_optimization_in_sleep)发生的。正是在新皮层，我们应该寻找代表 Halle 或某人祖母的概念神经元。最后一种可能性产生了一种假设的神经元类型，称为[祖母神经元](https://en.wikipedia.org/wiki/Grandmother_cell)。
 
-在猴子身上，研究人员可以识别出视觉皮层中对面孔做出反应的[祖母神经元](https://en.wikipedia.org/wiki/Grandmother_cell)。在那里，我们可能会发现在看到哈莉的图像时神经元会更加稳定地激活。然而，哈莉的概念可能仍然存在于其他地方，并在注意到哈莉时被视觉皮层细胞激活。
+在猴子身上，研究人员可以识别出视觉皮层中对面孔做出反应的[祖母神经元](https://en.wikipedia.org/wiki/Grandmother_cell)。在那里，我们可能会发现在看到Halle 的图像时神经元会更加稳定地激活。然而，Halle 的概念可能仍然存在于其他地方，并在注意到 Halle 时被视觉皮层细胞激活。
 
-另一个激活途径可能是从新闻上听到哈莉的名字。整个识别过程将由内嗅皮层和海马体协调进行，而最终的哈莉神经元将在新皮层的某处激活。
+另一个激活途径可能是从新闻上听到 Halle 的名字。整个识别过程将由内嗅皮层和海马体协调进行，而最终的Halle 神经元将在新皮层的某处激活。
 
 要让富含信息的信号产生奖励，必须有一个低概率事件在输入时被检测到，并通过联想将其编码为大脑皮层中的新知识。当前海马对熵做出反应时，[广泛的双侧丘脑皮层网络的活动会受到意外因素的调节]()。在那里，我们将寻找学习快乐的根源。根据消息的类型，还可能涉及其他比较器中枢。人们还发现，当检测到新的视觉信号时，杏仁体可能会产生奖励。对奖励视觉刺激做出反应的杏仁体神经元也可能对新的视觉刺激做出反应。[罗尔斯假设，这可能通过杏仁体来实现对新奇事物的奖励。](https://supermemo.guru/wiki/Amygdala_may_be_involved_in_rewarding_novel_input)
 
@@ -109,7 +109,7 @@
 1 .对快乐的预期
 2 .最终的奖励。
 
-在预期检测到一个高[学习熵](https://supermemo.guru/wiki/Learntropy)信号后，就会产生对高价值信息的积极追求。海马体检测到一条信息后，可能会同时将相关的学习信息发送到大脑皮层，并向快乐中心发送奖励信号。这将意味着学习新东西的时刻！
+在预期检测到一个高[学习熵](https://supermemo.guru/wiki/learn entropy)信号后，就会产生对高价值信息的积极追求。海马体检测到一条信息后，可能会同时将相关的学习信息发送到大脑皮层，并向快乐中心发送奖励信号。这将意味着学习新东西的时刻！
 
 ## 6.9 「哇！」因子
 
@@ -213,7 +213,7 @@
 
 好的学习是有奖励的。然而，也有不好的学习。因为这里有解码失败惩罚。如果一名学生努力解码一条信息，但失败了，他将受到惩罚。挫折就是这样产生的。这就是不喜欢学习的开始。如果学习熵低，奖励少，惩罚高，最终结果可能是负面的。如果我们把负面的奖励信号考虑在内，学习熵实际上可以为负值。无聊的讲座可能会带来负值的学习熵。这会导致抑制[学习内驱力](https://supermemo.guru/wiki/Learn_drive)。
 
-高知识估值导致高[学习熵](https://supermemo.guru/wiki/Learntropy)，而学习熵又为长期记忆知识的注意力和语义插入提供了必要条件。在强大的反馈循环中，**学习熵增强了[学习内驱力](https://supermemo.guru/wiki/Learn_drive)，这是决定学习熵的估值的基础。**这种反馈循环通过遗忘、习得性无助、衰老、伤害和精神资源的纯粹可用性来控制。通过合理的学习和生活方式管理，特别是[自然创造力循环](https://supermemo.guru/wiki/Natural_creativity_cycle)，这种平衡可以在高[学习内驱力](https://supermemo.guru/wiki/Learn_drive)水平上保持几十年。
+高知识估值导致高[学习熵](https://supermemo.guru/wiki/learn entropy)，而学习熵又为长期记忆知识的注意力和语义插入提供了必要条件。在强大的反馈循环中，**学习熵增强了[学习内驱力](https://supermemo.guru/wiki/Learn_drive)，这是决定学习熵的估值的基础。**这种反馈循环通过遗忘、习得性无助、衰老、伤害和精神资源的纯粹可用性来控制。通过合理的学习和生活方式管理，特别是[自然创造力循环](https://supermemo.guru/wiki/Natural_creativity_cycle)，这种平衡可以在高[学习内驱力](https://supermemo.guru/wiki/Learn_drive)水平上保持几十年。
 
 ## 6.12 信息时机与学习熵
 
@@ -243,18 +243,18 @@
 
 ## 6.14 最优信息传授
 
-在学校教育中，我们可以设想一个处于最优[学习熵](https://supermemo.guru/wiki/Learntropy)水平的讲座，在这个讲座中一个学生不断地说“哇!哇!”她保持尽可能快地记笔记。但是，更常见的情况是，讲座会发出一个高熵信息或让人感到无聊。它的学习熵会很低，甚至是负数。
+在学校教育中，我们可以设想一个处于最优[学习熵](https://supermemo.guru/wiki/learn entropy)水平的讲座，在这个讲座中一个学生不断地说“哇!哇!”她保持尽可能快地记笔记。但是，更常见的情况是，讲座会发出一个高熵信息或让人感到无聊。它的学习熵会很低，甚至是负数。
 如果最佳学习熵水平取决于学生，老师该如何最好地向课堂传授知识？有时候适合所有人的传授是不可能的。换句话说，这困难到需要天才的教学技能。对大多数老师来说，他们的传授使大多数孩子感到无聊或沮丧。
 
-在课堂上，少数幸运儿可能会理解大部分信息。对于有天赋的人来说，这堂课可能没有带来多少新知识。对他们来说这很无聊。对于其他孩子来说，信息的复杂性超过了他们的理解水平。在这种情况下，如果他们试图理解它，讲座可能会令他们挫败。一个关于弦理论的讲座可能相当于一个随机的英语单词序列的噪音。讲课是浪费时间的活动。诺贝尔奖得主[卡尔·威曼](https://supermemo.guru/wiki/Carl_Wieman)把它比作[放血](https://supermemo.guru/wiki/Wieman:_Lectures_make_no_sense)。
+在课堂上，少数幸运儿可能会理解大部分信息。对于一小部分有天赋的人来说，这堂课可能没有带来多少新知识。对他们来说这很无聊。对于其他孩子来说，信息的复杂性超出了他们的理解水平。在这种情况下，如果他们试图理解，老师的讲课可能会令他们挫败。一个关于弦理论的讲课可能相当于一个随机打乱排列的英语单词序列的噪音。讲课是一种浪费时间的活动。诺贝尔奖得主[ Carl Wieman ](https://supermemo.guru/wiki/Carl_Wieman)把它比作[放血](https://supermemo.guru/wiki/Wieman:_Lectures_make_no_sense)。
 
-为了避免负学习熵带来的挫折，学生们会像你从我[前面](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Prior_knowledge_in_information_seeking)提到的泰国频道换台一样"换台"。孩子们会忽略来自老师的"静电噪音"，并收听到其他“频道”，这些频道有更合适的学习熵水平（例如桌下的手机上的Facebook）。即使他们的理解能力很好，所传授的知识也可能无法与他们目前的知识互补。如果这些知识不能产生[高质量高价值](https://supermemo.guru/wiki/Knowledge_valuation_network)的推广，就会被认为是显而易见或毫无关联的。
+为了避免负学习熵带来的挫败感，学生们会像你从我[前面](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Prior_knowledge_in_information_seeking)提到的泰国频道换台一样「换台"」。孩子们会忽略来自老师的"静电噪音"，并收听到其他“频道”，这些频道有更合适的学习熵水平（例如桌下的手机上的Facebook）。即使他们的理解能力很好，所传授的知识也可能无法与他们目前的知识互补。如果这些知识不能产生[高质量高价值](https://supermemo.guru/wiki/Knowledge_valuation_network)的推广，就会被认为是显而易见或毫无关联的。
 
-Low learntropy, even if occurring occasionally, conditions the student to tune out. After a while, students will develop a filter that will turn a teacher into a silent radio channel carrying zero entropy and zero learntropy. Improvements to lecture quality will become futile. The teacher disappears!
+低学习熵，即使偶尔发生，也会让学生习惯性「换台」。一段时间后，学生们将「进化」一种过滤器，将教师当做一个零熵和零学习熵的无声广播频道。提高讲课质量将是徒劳的。老师在学生心中消失了！
 
-In a classroom setting, a student will often not be able to zero in on a better signal. The same signal is dished out to all students and they all may get equally bored. In contrast, Googling for good keywords can bombard the brain with perfectly timed low probability messages that will [fit the current knowledge tree like a jigsaw puzzle](https://supermemo.guru/wiki/Knowledge_crystallization). Google is a very cheap and efficient generator of "wow!".
+ 在教室里，学生往往不能集中注意力在更好的信息上。老师向所有学生传授同样的信息，他们都可能同样感到无聊。相比之下，在谷歌上搜索好关键词，[可以像拼图游戏一样，用符合当前知识树](https://supermemo.guru/wiki/Knowledge_crystallization)的低概率信息连续轰炸大脑。谷歌是一个非常便宜和高效的“哇！”生成器。
 
-In [incremental learning](https://supermemo.guru/wiki/Incremental_learning), the learntropy scanner will pick best channels, prioritize those and employ perfect timing for maximizing semantic connectivity and memory consolidation. This should make it easy to understand why **I am extremely happy, I will never ever be forced to sit in a school bench!** I love learning too much!
+在[渐进学习](https://supermemo.guru/wiki/Incremental_learning)中，学习熵探测器将选择最佳通道，对这些通道进行优先排序，并利用最佳时机最大限度地提高语义连接和记忆整合。这应该很容易理解为什么**我非常高兴，我永远不会被迫坐在学校的长椅上！**我太爱学习了！
 
 All the above examples illustrate how intricate the interaction between the signal and the brain is in recognizing things worth learning. The reward of learning is the best known indicator of learning quality. When students are happy, we are on the right track. When schools are the place of misery, we are failing on a societal scale.
 
@@ -266,7 +266,7 @@ This is explained using a [crystallization metaphor](https://supermemo.guru/wiki
 
 We love learning, but we usually hate to be taught. Those feelings correlate with creativity, which can probably be explained by the fact that creative elaboration is essential for [pattern completion](https://supermemo.guru/wiki/Pattern_completion) that underlies comprehension.
 
-In learning, we decide what to investigate. The [learntropy](https://supermemo.guru/wiki/Learntropy) evaluation strictly depends on the status of the brain and current memory activations. In teaching, knowledge is dished out independent of what we think of it. Many students list boring subjects as their number one reason for disliking school. Not bullying, stress, or early waking. Excruciating boredom! I write about the astronomical difference between self-directed learning and learning at school [here](https://supermemo.guru/wiki/Learning_history:_school_vs._self-directed_learning). It is all about the [learn drive](https://supermemo.guru/wiki/Learn_drive)!
+In learning, we decide what to investigate. The [learn entropy](https://supermemo.guru/wiki/learn entropy) evaluation strictly depends on the status of the brain and current memory activations. In teaching, knowledge is dished out independent of what we think of it. Many students list boring subjects as their number one reason for disliking school. Not bullying, stress, or early waking. Excruciating boredom! I write about the astronomical difference between self-directed learning and learning at school [here](https://supermemo.guru/wiki/Learning_history:_school_vs._self-directed_learning). It is all about the [learn drive](https://supermemo.guru/wiki/Learn_drive)!
 
 I am amazed with how many resources are wasted on research that looks for ways to keep kids interested during lectures, while it should be obvious that lectures are just a poor educational tool. Eye contact analysis? Engagement analysis? Efforts to quantify passion? All kids are equipped with natural [learn drive](https://supermemo.guru/wiki/Learn_drive) and our priority should be to ensure we do not destroy that drive. [Force-feeding knowledge](https://supermemo.guru/wiki/Schools_suppress_the_learn_drive) is the prime destroyer of the [learn drive](https://supermemo.guru/wiki/Learn_drive). In addition, there are many socioeconomic factors that prevent a great chunk of kids to thrive even in the best circumstances. Some kids will never show passion for learning. In most cases, it is not their fault. Only a tiny fraction are limited by disabilities, health, and less fortunate genetic endowments. The exponential decay in the [learn drive](https://supermemo.guru/wiki/Learn_drive) with age is caused primarily by compulsory schooling. Passive lecturing is a huge contributor to that process.
 
@@ -322,7 +322,7 @@ In a similar fashion, with each sentence typed on the computer, you will strike 
 
 ### 6.16.4 Declarative learning reward
 
-Things are a bit more complex in explaining declarative learn drive. There is a definite reward to declarative learning. Some things are just interesting, and finding out the truth is pleasing. At the neural level, the brain will scan inputs and neural activations to look for areas of high learntropy with maximum delivery of new knowledge matching the current status of memory. Any meaningful message of low probability will be deemed more attractive. A bright fractal pattern will be deemed beautiful. A gray randomness of colors will be deemed boring. The same will occur in the case of a more complex visual message. A vibrant forest is beautiful. The same forest may seem unattractive in winter, in draught, or under the impact of environmental pollution. [Steven Pinker](https://en.wikipedia.org/wiki/Steven_Pinker) remarked that we are attracted to images that ooze vitality. I disagree. The attraction is much wider. We may be equally well attracted to a deathly volcano or a frozen landscape of Antarctica. We love environments, signals, messages, or brain activations that can express complex information using simple models. The picture of a beautiful beach can be represented by a couple of simple shapes and textures.
+Things are a bit more complex in explaining declarative learn drive. There is a definite reward to declarative learning. Some things are just interesting, and finding out the truth is pleasing. At the neural level, the brain will scan inputs and neural activations to look for areas of high learn entropy with maximum delivery of new knowledge matching the current status of memory. Any meaningful message of low probability will be deemed more attractive. A bright fractal pattern will be deemed beautiful. A gray randomness of colors will be deemed boring. The same will occur in the case of a more complex visual message. A vibrant forest is beautiful. The same forest may seem unattractive in winter, in draught, or under the impact of environmental pollution. [Steven Pinker](https://en.wikipedia.org/wiki/Steven_Pinker) remarked that we are attracted to images that ooze vitality. I disagree. The attraction is much wider. We may be equally well attracted to a deathly volcano or a frozen landscape of Antarctica. We love environments, signals, messages, or brain activations that can express complex information using simple models. The picture of a beautiful beach can be represented by a couple of simple shapes and textures.
 
 Entropy of information is related to compressability of data. Signal processing begins on the input. The retina performs a 100-fold compression of the visual input signal. The hippocampus and the visual cortex receive simple representations of shapes and relationships. Those may end up changing the status of a single synapse in cortical long-term memory storage.
 
@@ -402,7 +402,7 @@ Robert Bjork might be the best expert on learning theory. If he tells you that d
 
 Desirable difficulty does not take away the pleasure of learning. Just the opposite, it makes learning more effective and more fun. If difficulty goes too far, and it results in displeasure then the difficulty is no longer desirable. This simple equivalence comes from the mechanics of the reward system in [learn drive](https://supermemo.guru/wiki/Learn_drive).
 
-Note that reward bonus for efficient learning due to desirable difficulty does not need to correspond to high [learntropy](https://supermemo.guru/wiki/Learntropy). Learntropy is a metric for an information channel. Active recall, for example, is unrelated to novelty. It refers to memory reconsolidation. Similarly, problem solving may in part come from the need to achieve goals unrelated to learning, or be rewarded by productivity other than gains in new knowledge.
+Note that reward bonus for efficient learning due to desirable difficulty does not need to correspond to high [learn entropy](https://supermemo.guru/wiki/learn entropy). learn entropy is a metric for an information channel. Active recall, for example, is unrelated to novelty. It refers to memory reconsolidation. Similarly, problem solving may in part come from the need to achieve goals unrelated to learning, or be rewarded by productivity other than gains in new knowledge.
 
 Note also that nearly all of the above desirable difficulties are inherently wired into the process of [incremental learning](https://supermemo.guru/wiki/Incremental_learning).
 
@@ -448,7 +448,7 @@ If learning is the most sustainable form of pleasure, why do half of the student
 
 The answer is simple and important: students procrastinate because as much as good learning is a pleasure, bad learning is highly unpleasant. Most of assignments at school or even college carry a great deal of mismatch with the needs of the [learn drive](https://supermemo.guru/wiki/Learn_drive). This kind of learning is ineffective and unpleasant. Those kids will often play computer games in the evening claiming they *need to rest their brains*. I doubt their brains are at rest. They actually do jobs that they find pleasurable. A great deal of that pleasure comes from new learning. Unfortunately, there are no credits at school for good gaming, so the sinusoidal cycle of chores-and-fun begins on the next day or even the same day with homework.
 
-I never stop being amazed how many students call themselves lazy. At the same time they can do many heroic feats of physical of mental work as long as these are enjoyable or serve their own goals. Even those with thousands of memorized items in SuperMemo often give themselves low conscientiousness scores. Goals of learning can be hazy, but even if they are crystal clear, poor match between the input and prior knowledge can result in significant displeasure. If [learntropy](https://supermemo.guru/wiki/Learntropy) is low, assignments can be boring. If it is negative, they will be repulsive.
+I never stop being amazed how many students call themselves lazy. At the same time they can do many heroic feats of physical of mental work as long as these are enjoyable or serve their own goals. Even those with thousands of memorized items in SuperMemo often give themselves low conscientiousness scores. Goals of learning can be hazy, but even if they are crystal clear, poor match between the input and prior knowledge can result in significant displeasure. If [learn entropy](https://supermemo.guru/wiki/learn entropy) is low, assignments can be boring. If it is negative, they will be repulsive.
 
 The battle between high goal valuations and negative rewards of bad learning will result in procrastination. Procrastinators often call themselves lazy even if they are nothing but.
 
